--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,8 +5,8 @@
 
     <FrameLayout
         android:id="@+id/fl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"></FrameLayout>
 
     <RadioGroup
@@ -30,7 +30,7 @@
             android:textSize="14sp" />
 
         <RadioButton
-            android:id="@+id/rb_lxr"
+            android:id="@+id/rb_friends"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
