--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,30 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Button
+    android:layout_height="match_parent"
+    android:background="#4e92ff"
+    tools:context="com.chatting.activitys.login.view.LoginActivity">
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登陆界面"
-        android:id="@+id/loginBut"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/registerBut" />
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="166dp">
 
-    <Button
-        android:id="@+id/registerBut"
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:alpha="0.5"
+            android:background="#fff"
+
+            android:hint="请输入手机号" />
+
+        <EditText
+            android:id="@+id/edit_pass"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:alpha="0.5"
+            android:background="#fff"
+            android:hint="请输入密码" />
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edit_verify"
+                android:layout_width="130dp"
+                android:layout_height="60dp"
+                android:alpha="0.5"
+                android:background="#fff"
+                android:hint="请输入验证码" />
+           <com.facebook.drawee.view.SimpleDraweeView
+              android:id="@+id/sdv_verify"
+               android:layout_width="150dp"
+               android:layout_height="60dp" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/but_login"
+            android:layout_marginTop="30dp"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:background="@drawable/textview_circle"
+            android:textColor="#fff"
+            android:text="登录"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="没有收到验证码？试试语音验证"
+            android:textColor="#fff"/>
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="忘记密码"
+                android:textColor="#fff"/>
+            <TextView
+                android:id="@+id/but_register"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="注册账号"
+                android:textColor="#fff"
+                android:gravity="right"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/checkedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注册"
-        android:layout_marginEnd="100dp"
-        android:layout_alignBaseline="@+id/loginBut"
-        android:layout_alignBottom="@+id/loginBut"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:text="我已经阅读《隐私和安全协议》"
+        android:textColor="#fff"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:text="忘记密码"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loginBut"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
