--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4e92ff">
-
+    android:background="#4e92ff"
+    tools:context="com.chatting.activitys.login.view.LoginActivity">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="166dp"
-        android:orientation="vertical">
+        android:layout_marginTop="166dp">
 
         <EditText
             android:id="@+id/edit_name"
@@ -23,6 +25,7 @@
 
         <EditText
             android:id="@+id/edit_pass"
+            android:inputType="textPassword"
             android:layout_width="280dp"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
@@ -31,60 +34,56 @@
             android:hint="请输入密码" />
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/edit_verify"
-                android:layout_width="130dp"
-                android:layout_height="60dp"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
                 android:alpha="0.5"
                 android:background="#fff"
+                android:textSize="16sp"
                 android:hint="请输入验证码" />
-
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/sdv_verify"
-                android:layout_width="150dp"
-                android:layout_height="60dp" />
+           <com.facebook.drawee.view.SimpleDraweeView
+              android:id="@+id/sdv_verify"
+               android:layout_width="190dp"
+               android:layout_height="70dp" />
         </LinearLayout>
-
         <TextView
             android:id="@+id/but_login"
+            android:layout_marginTop="30dp"
             android:layout_width="280dp"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:background="@drawable/textview_circle"
-            android:gravity="center"
+            android:textColor="#fff"
             android:text="登录"
-            android:textColor="#fff" />
-
+            android:gravity="center"/>
         <TextView
             android:layout_width="280dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:text="没有收到验证码？试试语音验证"
-            android:textColor="#fff" />
-
+            android:textColor="#fff"/>
         <LinearLayout
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
             <TextView
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:text="忘记密码"
-                android:textColor="#fff" />
-
+                android:textColor="#fff"/>
             <TextView
                 android:id="@+id/but_register"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:text="注册账号"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:gravity="right"
+                />
         </LinearLayout>
     </LinearLayout>
 
@@ -96,6 +95,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:text="我已经阅读《隐私和安全协议》"
-        android:textColor="#fff" />
+        android:textColor="#fff"/>
 
 </RelativeLayout>
